fixed box shaddows overlapping

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -162,8 +162,9 @@ img {
 .overflow-container {
   overflow: hidden;
   clip-path: content-box;
-  justify-content: center;
-  align-items: center;
+  justify-content: inherit;
+  align-items: inherit;
+  flex-direction: inherit;
   background-color: transparent;
   height: 100%;
   width: 100%;
@@ -449,6 +450,7 @@ img {
   height: 45vh;
   max-height: 45vh;
   padding: 32px;
+  background-color: transparent;
   margin: 0 auto;
   justify-content: center;
 }
@@ -540,6 +542,10 @@ img {
 
 /*Contact form*/
 /* Contact Section */
+#contact {
+  background-color: transparent;
+}
+
 .contact-form,
 .contact-info {
   width: 100%;
@@ -604,60 +610,6 @@ img {
 .contact-info-item .social-links a:hover {
   color: var(--default);
   background-color: var(--background-color);
-}
-
-/* RESPONSIVE LAYTOUT */
-@media (max-width: 1750px) {
-  section,
-  header {
-    width: 75%;
-    max-width: 75%;
-  }
-}
-
-@media (max-width: 1200px) {
-  section,
-  header {
-    width: 90%;
-    max-width: 90%;
-  }
-}
-
-@media (max-width: 767px) {
-  :root {
-    --text-adjust: 0.5;
-  }
-  .home-info {
-    flex-direction: column;
-    align-items: center;
-  }
-  .home-img-wrapper {
-    width: 60%;
-  }
-  .home-text {
-    align-items: center;
-    text-align: center;
-    width: 100%;
-    padding: 32px 0px 32px;
-    order: 2;
-  }
-  .project {
-    flex-direction: column;
-  }
-  .project-img {
-    height:60%;
-    max-height: 60%;
-    order: 0;
-  }
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
 }
 
 /*Sizes*/
@@ -961,4 +913,63 @@ img {
   height: 30px;
   width: 30px;
   border-color: var(--dark-purple);
+}
+
+/* RESPONSIVE LAYTOUT */
+@media (max-width: 1750px) {
+  section,
+  header {
+    width: 75%;
+    max-width: 75%;
+  }
+}
+
+@media (max-width: 1200px) {
+  section,
+  header {
+    width: 90%;
+    max-width: 90%;
+  }
+}
+
+@media (max-width: 767px) {
+  :root {
+    --text-adjust: 0.5;
+  }
+  section,
+  header {
+    width: 100%;
+    max-width: 100%;
+  }
+  .home-info {
+    flex-direction: column;
+    align-items: center;
+  }
+  .home-img {
+    width: 60%;
+  }
+  .home-text {
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    padding: 32px 0px 32px;
+    order: 2;
+  }
+  .project {
+    flex-direction: column;
+  }
+  .project-img {
+    height:60%;
+    max-height: 60%;
+    order: 0;
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
